# Syndra-Torrent

./: LICENSE  README.md  config.json  install.sh
backend/: main.go
backend/models/: config.go  torrent.go  torrents.go
core/: Cargo.toml
core/proto/: torrent.proto
core/src/: grpc.rs  main.rs  torrent.rs
frontend/: tailwind.config.js
frontend/src/: App.css  App.jsx
frontend/src/components/: Filters.jsx  TorrentDetailsModal.jsx  TorrentForm.jsx  TorrentList.jsx
gui/: requirements.txt
gui/src/: main.py  settings.py  torrent_list.py  window.py
gui/styles/: dark.css  theme.css
scripts/: build.sh  generate_protoc.sh
