[package]
name = "syndra-torrent-core"
version = "0.1.0"
edition = "2021"

[dependencies]
libtorrent = "0.14"
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify-rust = "4.11"

[build-dependencies]
tonic-build = "0.12"
